test/pending/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
f174c50c4363c492362a05c72dd45b0da18fdcd8 ?plugins.jar
